# backend/docs/swagger.yaml
@@ -298,6 +298,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/server.ErrorResponse'
+        "429":
+          description: Too Many Requests
+          schema:
+            $ref: '#/definitions/server.ErrorResponse'
       security:
       - BearerAuth: []
       summary: Top up wallet funds
@@ -398,6 +402,10 @@ paths:
             $ref: '#/definitions/server.ErrorResponse'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/server.ErrorResponse'
+        "429":
+          description: Too Many Requests
           schema:
             $ref: '#/definitions/server.ErrorResponse'
       security:
